Fixed bug #27278 (*printf() functions treat arguments as if passed by reference).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@151567 c90b9560-bf6c-de11-be94-00142212c4b1